--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,15 @@
 .square{
-  height: 100px;
-  width: 100px;
+  height: 200px;
+  width: 200px;
   border: 2px solid black;
+  font-size: 10rem;
+  text-align: center;
 }
+.gameboard{
+  display: flex;
+  width: 620px;
+  flex-wrap: wrap;
+  margin: 0 auto;
+}
+
+//
